Fix images stretching on IE 11 and on phones

--- a/styles.css
+++ b/styles.css
@@ -298,11 +298,11 @@ header h1 {
   padding: 0 30px 75px 30px;
 }
 
-.minicard p {
+.minicard li p {
   text-align: left;
 }
 
-.minicard h4 {
+.minicard li h4 {
   text-align: center;
   margin-top: 20px;
   font-size: 20px;
@@ -311,21 +311,24 @@ header h1 {
   text-decoration: 3px red underline;
 }
 
-.minicard img {
+.minicard li img {
+  margin: 0 auto;
+  align-self: center;
+  object-fit: contain;
   max-width: 100%;
 }
 
-.minicard a {
+.minicard li a {
   padding-top: 20px;
   /* margin-top: auto; */
   font-size: 18px;
 }
 
-.minicard a:hover {
+.minicard li a:hover {
   text-decoration: 1px red underline;
 }
 
-.minicard a::after {
+.minicard li a::after {
   content: " »"
 }
 
@@ -396,7 +399,7 @@ header h1 {
   }
 }
 
-@media screen and (min-width: 425px) { /* 425 px */
+@media screen and (min-width: 26.5625em) { /* 425 px */
   /* Transform nav bar into horizontal one */
   nav {
     height: 10vh;
@@ -463,7 +466,7 @@ header h1 {
   }
 }
 
-@media screen and (min-width: 475px) {
+@media screen and (min-width: 29.6875em) { /* 475 px */
   #navlogo {
     max-height: unset; /* Allow logo to be any height now that the width will compensate */
   }
